--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app",
   "scripts": {
-    "start": "nodemon --exec ts-node-dev src/app.ts",
+    "start": "nodemon --exec npx ts-node-dev src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint -c .eslintrc.js --ext .ts src"
   },
@@ -18,7 +18,7 @@
     "mongodb": "^3.6.9",
     "mongodb-extension": "^0.1.5",
     "onecore": "0.0.16",
-    "validator-x": "0.0.7"
+    "validator-x": "0.0.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
