--- a/package.json
+++ b/package.json
@@ -11,25 +11,21 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "express-ext": "^0.1.7",
     "mongodb": "^3.6.9",
     "mongodb-extension": "^0.1.5",
     "onecore": "0.0.16",
-    "validator-x": "0.0.11"
+    "typescript": "^4.6.2",
+    "xvalidators": "0.0.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12",
-    "@types/mongodb": "^3.6.17",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "eslint": "^7.28.0",
-    "nodemon": "^2.0.7",
-    "ts-node-dev": "^1.1.6",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.3.2"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.22",
+    "eslint": "^8.11.0",
+    "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8",
+    "tslint": "^6.1.3"
   }
 }
