--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "express": "^4.17.3",
     "express-ext": "^0.1.7",
     "mongodb": "^3.6.9",
-    "mongodb-extension": "^0.1.5",
-    "onecore": "0.0.16",
+    "mongodb-extension": "^0.1.9",
+    "onecore": "^0.0.28",
     "typescript": "^4.6.2",
-    "xvalidators": "0.0.4"
+    "xvalidators": "^0.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
