--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-  "name": "backoffice",
+  "name": "rest-api",
   "version": "1.0.0",
   "description": "",
   "main": "app",
   "scripts": {
-    "start": "nodemon --exec npx ts-node-dev src/app.ts",
+    "start": "nodemon --exec ts-node-dev src/app",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint -c .eslintrc.js --ext .ts src"
   },
   "keywords": [],
   "author": "",
   "dependencies": {
+    "config-plus": "^0.0.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-ext": "^0.1.7",
-    "mongodb": "^3.6.9",
+    "express-ext": "^0.1.21",
+    "logger-core": "^0.3.0",
+    "mongodb": "3.7.3",
     "mongodb-extension": "^0.1.9",
     "onecore": "^0.0.28",
-    "typescript": "^4.6.2",
     "xvalidators": "^0.0.4"
   },
   "devDependencies": {
+    "@types/bson": "4.0.3",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.22",
-    "eslint": "^8.11.0",
+    "@types/mongodb": "3.6.17",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "nodemon": "^2.0.15",
+    "ts-loader": "^9.2.8",
     "ts-node-dev": "^1.1.8",
-    "tslint": "^6.1.3"
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
