--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bson": "4.0.3",
     "@types/express": "^4.17.13",
     "@types/mongodb": "3.6.17",
+    "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "nodemon": "^2.0.15",
